samples/_failures_safe/1761494424_74e4fd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2384c84c.c: In function ‘print_token’:
./samples/SAFE/__tmp_2384c84c.c:169:12: error: expected expression at end of input
  169 |            type_names[token->type],
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_2384c84c.c:169:12: error: expected declaration or statement at end of input
